--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "body-parser": "1.19.0"
-    "baileys": "npm:@whiskeysockets/baileys@^6.6.7",
+    "body-parser": "1.19.0",
+    "baileys": "npm:@whiskeysockets/baileys@^6.6.7"
 
   
   }
