--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "AnggazyyDev",
   "license": "MIT",
   "dependencies": {
+    "baileys": "npm:@whiskeysockets/baileys@^6.6.7",
     "express": "^4.17.1",
-    "body-parser": "1.19.0",
-    "baileys": "npm:@whiskeysockets/baileys@^6.6.7"
+    "body-parser": "1.19.0"
+    
 
   
   }
