--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "baileys": "npm:@whiskeysockets/baileys@^6.6.7",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
     "express": "^4.17.1",
     "body-parser": "1.19.0"
     
