--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "AnggazyyDev",
-  "version": "12.0.0",
-  "description": "Made By Anggazyy Mods",
-  "main": "server.js",
+  "name": "ApI",
+  "version": "1.0.0",
+  "description": "Made By Sam",
+  "main": "start.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node start.js"
   },
-  "author": "AnggazyyDev",
+  "author": "King Sam",
   "license": "MIT",
   "dependencies": {
     "baileys": "npm:@whiskeysockets/baileys@^6.6.7",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
     "express": "^4.17.1",
+    "readline": "^1.3.0",
+    "yargs": "^17.7.2",
+     "node-fetch": "^2.6.7",
+     "lodash": "^4.17.21",
     "body-parser": "1.19.0"
     
 
