--- a/package.json
+++ b/package.json
@@ -1,25 +1,50 @@
 {
-  "name": "ApI",
-  "version": "1.0.0",
-  "description": "Made By Sam",
+  "name": "DYNAMIC-V2",
+  "version": "2.0.0",
+  "description": "WhatsApp Bot 2024",
   "main": "start.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node start.js"
   },
-  "author": "King Sam",
-  "license": "MIT",
+  "author": "𝕶𝖎𝖓𝖌 𝕾𝖆𝖒",
   "dependencies": {
+    "@adiwajshing/keyed-db": "^0.2.4",
+    "api-dylux": "^1.8.4",
+    "awesome-phonenumber": "^2.64.0",
+    "axios": "^0.24.0",
+    "express": "^4.17.1",
     "baileys": "npm:@whiskeysockets/baileys@^6.6.7",
+    "chalk": "^4.1.2",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
-    "express": "^4.17.1",
+    "cheerio": "^1.0.0-rc.10",
+    "child_process": "^1.0.2",
+    "performance-now": "^2.1.0",
+    "crypto": "^1.0.1",
+    "fake-useragent": "^1.0.1",
+    "file-type": "^16.5.3",
+    "fluent-ffmpeg": "^2.1.2",
+    "got": "^13.0.0",
+    "jimp": "^0.16.1",
+    "lodash": "^4.17.21",
+    "lowdb": "^2.1.0",
+    "moment-timezone": "^0.5.34",
+    "mongoose": "^6.2.1",
+    "multistream": "^2.1.0",
+    "node-fetch": "^2.6.7",
+    "node-webpmux": "^3.1.0",
+    "os": "^0.1.1",
+    "parse-ms": "^2.1.0",
+    "pino": "^7.0.0",
     "readline": "^1.3.0",
+    "body-parser": "1.19.0",
+    "request": "^2.88.2",
+    "rimraf": "^3.0.2",
+    "stream": "^0.0.2",
+    "util": "^0.12.5",
     "yargs": "^17.7.2",
-     "node-fetch": "^2.6.7",
-     "lodash": "^4.17.21",
-    "body-parser": "1.19.0"
-    
-
-  
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.5"
   }
 }
