--- a/package.json
+++ b/package.json
@@ -1,50 +1,86 @@
 {
-  "name": "DYNAMIC-V2",
-  "version": "2.0.0",
-  "description": "WhatsApp Bot 2024",
+  "name": "CLASSIC-V4",
+  "version": "4.0.0",
+  "description": "Base Bot ",
   "main": "start.js",
   "type": "commonjs",
   "scripts": {
     "start": "node start.js"
   },
   "author": "𝕶𝖎𝖓𝖌 𝕾𝖆𝖒",
+  "license": "MIT",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "api-dylux": "^1.8.4",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@hapi/boom": "^10.0.0",
+    "@whiskeysockets/baileys": "github:AxellNetwork/Baileys",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
-    "express": "^4.17.1",
-    "baileys": "npm:@whiskeysockets/baileys@^6.6.7",
+        "badadvice": "^1.0.0",
+    "multistream": "^2.1.0",
+    "api-dylux": "^1.8.4",
     "chalk": "^4.1.2",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^11.1.1",
+      "js-confuser": "^1.0.0",
+       "acrcloud": "^1.4.0",
     "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
-    "performance-now": "^2.1.0",
+    "cloudscraper": "^4.6.0",
+    "cookie": "^0.5.0",
+    "rimraf": "^3.0.2",
+    "sharp": "^0.32.6",
     "crypto": "^1.0.1",
+    "dhn-api": "^1.1.3",
+    "events": "^3.3.0",
     "fake-useragent": "^1.0.1",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
-    "got": "^13.0.0",
-    "jimp": "^0.16.1",
+    "form-data": "^4.0.0",
+    "fs-extra": "^10.0.0",
+    "parse-ms": "^2.1.0",
+    "g-i-s": "^2.1.6",
+    "google-it": "^1.6.2",
+    "got": "^11.8.3",
+    "gradient-string": "^2.0.2",
+    "header-generator": "^2.1.52",
+    "http2": "^3.3.7",
+    "https": "^1.0.0",
+    "human-readable": "^0.2.1",
+    "javascript-obfuscator": "^4.0.0",
+    "ocr-space-api-wrapper": "^2.3.2", 
+    "jimp": "^0.22.12",
+    "jsdom": "^16.4.0",
+    "libsignal-node": "^2.0.1",
     "lodash": "^4.17.21",
     "lowdb": "^2.1.0",
+    "mathjs": "^9.4.4",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.2.1",
-    "multistream": "^2.1.0",
-    "node-fetch": "^2.6.7",
-    "node-webpmux": "^3.1.0",
-    "os": "^0.1.1",
-    "parse-ms": "^2.1.0",
-    "pino": "^7.0.0",
-    "readline": "^1.3.0",
-    "body-parser": "1.19.0",
+    "mumaker": "^1.0.0",
+    "net": "^1.0.2",
+    "nik-parser": "^1.0.1",
+    "node-cron": "^3.0.0",
+    "node-fetch": "^2.6.1",
+    "node-id3": "^0.2.3",
+    "node-webpmux": "^3.1.1",
+    "node-youtube-music": "^0.8.3",
+    "openai": "^3.2.1",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
+    "perf_hooks": "0.0.1",
+    "pino": "^7.0.5",
+    "qrcode-terminal": "^0.12.0",
+    "randomstring": "^1.3.0",
     "request": "^2.88.2",
-    "rimraf": "^3.0.2",
-    "stream": "^0.0.2",
-    "util": "^0.12.5",
-    "yargs": "^17.7.2",
-    "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.5"
+    "scrape-primbon": "^1.1.0",
+    "spinnies": "^0.5.1",
+    "tls": "^0.0.1",
+    "url": "^0.11.4",
+    "user-agents": "^1.1.279",
+    "util": "^0.12.4",
+    "yargs": "^17.2.1",
+    "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.4",
+    "yt-search": "^2.10.2",
+    "ytdl-core": "^4.11.0"
   }
 }
